...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/firstrun_icon_bottom_margin"
                        android:layout_marginTop="50dp"
                        tools:src="@mipmap/ic_launcher" />
...
                        android:lineSpacingMultiplier="1.25"
                        android:textColor="#ff737373"
                        android:textSize="14sp"
                        tools:text="@string/first_run_page2_text" />

                    <Switch
                        android:id="@+id/switch_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:switchPadding="10dp"
                        android:visibility="gone"
...
