<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<Switch xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/switch_widget"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:clickable="false"
    android:focusable="false"
    android:gravity="center_vertical"
    android:orientation="vertical" />



