...
    <string name="preference_about">About</string>

    <!-- Item in Preferences that shows the night mode adjust brightness widget. -->
    <string name="preference_night_mode_brightness">Night mode brightness</string>
   
    <!-- After users have tried night mode once, the next time the user opens menu we would like to show them how they can long press the Night Mode icon to show a widget for brightness adjustments. -->
    <string name="night_mode_on_boarding_message">Long press to adjust brightness</string>
  
    <!-- Content description (not visible, for screen readers etc.): Clear text in URL bar -->
    <string name="content_description_clear_input">Clear input</string>

    <!-- Content description (not visible, for screen readers etc.): Clicking on the website overlay
     while in typing mode will dismiss and go back to the browser. This text will be read when the
...
    <!-- Name of Private mode shortcut. %1$s will be replaced with the name of the app (e.g. Firefox Lite) -->
    <string name="private_browsing_shortcut_name">%1$s - Private browsing</string>
    <!-- Item in Preferences that users can add private mode shortcut to their device' home. -->
    <string name="preference_add_private_browsing_shortcut">Add private mode shortcut to Home screen</string>
   
    <!-- Message shown when the user is using screenshot for the first time. Guide them how to go to "My shots". -->
    <string name="my_shot_on_boarding_message">View your screenshots here!</string>
    <!-- The notice shown along with the message when the user captures screenshot for the first time -->
    <string name="my_shot_on_boarding_category_message">To improve your product experience, we collect information about your screenshots’ categories.</string>

    <!-- Title on web auth dialog. This dialog hint user authentication is required to proceed to the website. -->
    <string name="http_auth_dialog_title">Authentication required</string>
    <!-- Text on an input username field in web auth dialog. This hint user to input username here. -->
...
